--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "teepluss/laravel-console",
+	"name": "teepluss/console",
 	"description": "Browser console for Laravel Framework.",
 	"keywords": [
 		"laravel",
@@ -20,11 +20,8 @@
 		"illuminate/support": ">=5.1.0"
 	},
 	"autoload": {
-		"classmap": [
-			"src/controllers"
-		],
-		"psr-0": {
-			"Darsain\\Console\\": "src/"
+		"psr-4": {
+			"Teepluss\\Console\\": "src/"
 		}
 	},
 	"minimum-stability": "dev",
