Fix the name of the Laravel Provider in composer.json

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Teepluss\\Console\\ConsoleServiceProvider::class"
+                "Teepluss\\Console\\ConsoleServiceProvider"
             ]
         }
     },
